tests/NormalTests/paczka1/fuzzy1/24745594.err
Error in line 1: xEbY A689 91,6
Error in line 19: kAIcsG A689 61,2
Error in line 20: 5m7HiUe A689 41,0
Error in line 24: YSAs6BKp A440 96,9
Error in line 16: 2W1YvFRpPX A689 26,7
